Integration test - first working version in place